
现在、运行Red Hat Enterprise 9.4、Ubuntu 23.04和Ubuntu 24.04的主机支持数据代理。

https://docs.netapp.com/us-en/bluexp-copy-sync/task-installing-linux.html#linux-host-requirements["查看Linux主机要求"](英文)



=== 2024年10月27日



==== 错误修复

我们更新了BlueXP复制和同步服务以及数据代理以修复一些错误。新的数据代理版本为1.0.56。



=== 2024年9月16日



==== 错误修复

我们更新了BlueXP复制和同步服务以及数据代理以修复一些错误。新的数据代理版本为1.0.55。



== 数字顾问



=== 2025年8月6日



==== 支持授权开关

ef3139c75debdd9ee259a4ea386083d3



==== RSS AutoSupport数据的阈值

AutoSupport小部件中的“最近停止发送 (RSS)”限制已从 48 小时（2 天）延长至 216 小时（9 天），之后系统才会被标记为 RSS。这样做是为了适应仅发送每周AutoSupport数据的StorageGRID等平台。



==== Digital Advisor API 目录中已弃用的 API 部分

Digital Advisor API 目录中提供了一个新的弃用 API 部分。它列出了计划弃用的 API，以及弃用时间表和替代 API。



==== 容量预测 V2 和支持结束 API 模块弃用

容量预测 V2 和支持终止 API 模块计划弃用。要访问已弃用的 API 或了解弃用时间表和替代 API，请导航至 *API 服务 -> 浏览 -> 已弃用的 API*。



=== 2025年7月9日



==== Upgrade Advisor

* 升级顾问计划新增了多格式下载选项，以简化ONTAP升级规划并解决潜在的阻碍或警告。现在，您可以下载 Excel、PDF 和 JSON 格式的升级顾问计划。
* 在升级顾问计划的 Excel 格式中，进行了以下增强：
+
** 您可以查看在集群上执行的预检查，并使用“通过”、“失败”或“跳过”等指示标记结果。这可确保集群处于最佳状态，以完成ONTAP升级。
** 您可以查看适用于集群的推荐最新固件更新，以及ONTAP目标版本附带的版本。
** 新增了一个选项卡，用于检查 SAN 集群的互操作性。该选项卡可显示所选目标ONTAP版本支持的主机操作系统版本。






=== 2025年5月8日



==== AutoSupport小工具

AutoSupport小工具已进行了增强、其中包含一个弹出窗口、可提供有关已停止发送AutoSupport数据的系统的详细信息。启用AutoSupport可降低停机风险、并支持主动式系统运行状况管理。



==== 支持合同报告

支持合同报告已得到增强、可包括新的asp/LSG标志字段。使用此字段可以筛选和标识授权支持合作伙伴(也称为生命周期服务认证)所涵盖的系统。



==== Sustainability信息板

现在、您可以使用Sustainability演示文稿中的链接启动Sustainability信息板。



== 数字电子钱包



=== 2025年3月10日



==== 删除订阅的功能

如果您取消订阅、现在可以从电子钱包中删除订阅。



==== 查看Marketplace订阅的已用容量

现在、在查看PAYGO订阅时、您可以查看此订阅的已用容量。



=== 2025年2月10日

BlueXP  数字钱包经过重新设计、易于使用、现在可提供额外的订阅和许可证管理。



==== 新增了"概述"信息板

数字钱包主页提供了一个更新的NetApp许可证和Marketplace订阅信息板、可以深入查看特定服务、许可证类型和所需操作。



==== 配置凭据订阅

现在、您可以通过BlueXP  数字钱包为提供商凭据配置订阅。通常、您在首次订阅Marketplace订阅或年度合同时会执行此操作。以前只能在"凭据"页面上更改订阅的凭据。



==== 将订阅与组织相关联

现在、您可以直接从数字钱包更新订阅关联到的组织。



==== 管理Cloud Volume ONTAP许可证

现在，您可以通过主页或*直接许可证*选项卡管理Cloud Volumes ONTAP许可证。使用*商城订阅*选项卡查看您的订阅信息。



=== 2024年3月5日



==== BlueXP灾难恢复
